--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,7 +5,8 @@ require:
 AllCops:
   TargetRubyVersion: 2.7
   NewCops: enable
-
+  Exclude:
+    - ".direnv/**/*"
 Style/StringLiterals:
   Enabled: true
   EnforcedStyle: double_quotes
